# natural-old-deprecated

./: Cargo.toml  LICENSE  README.md  index.html
server/: README.md  mix.exs
server/config/: config.exs
server/lib/: server.ex
server/lib/server/: application.ex
src/: lib.rs  math.rs  mover.rs
static/: canvas.js  index.html
