[package]
name = "natural"
version = "0.1.0"
authors = ["Mauricio Palma <mauricio.palma@woodlikeocean.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'ImageData',
  'CanvasRenderingContext2d',
]